# vectorizers

./: .gitignore  LICENSE  README.md  pyproject.toml
vectorizers/nlp/: bm25.py
vectorizers/tests/: test_nlp.py
